Schedule Update Routes Added
