# src/swagger-output.json
@@ -280,6 +280,56 @@
       }
     },
     "/api/v1/schedule/{id}": {
+      "put": {
+        "tags": [
+          "Schedules"
+        ],
+        "summary": "Update Schedule By Id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "date": {
+                    "example": "any"
+                  },
+                  "classes": {
+                    "example": "any"
+                  },
+                  "jobs": {
+                    "example": "any"
+                  },
+                  "studySlots": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "delete": {
         "tags": [
           "Schedules"
